--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevProfile Analyzer</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.css" integrity="sha512-Z0kTB03S7BU+c3hYYFKSiJB2kU6TJeU+SJJHNYb7m/BQQQQQh1zZSjXvAYYYYYYw1Rl1FQI+Nc7rXYLYDGvw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,6 +21,7 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#how-it-works">How It Works</a></li>
+                <li><a href="#analyzer">Analyze</a></li>
             </ul>
         </nav>
     </header>
@@ -25,12 +29,12 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Optimize Your Developer Profile</h1>
-                <p>Get AI-powered insights on your digital presence and improve your chances of landing your dream job.</p>
+                <h1>Analyze Your Developer Profile</h1>
+                <p>Get AI-powered insights on your GitHub activity, LinkedIn profile, and coding skills to stand out to recruiters.</p>
                 <a href="#analyzer" class="btn primary">Analyze My Profile</a>
             </div>
             <div class="hero-image">
-                <img src="assets/images/hero-image.svg" alt="Developer profile analysis">
+                <img src="assets/images/hero-image.svg" alt="Developer Profile Analysis">
             </div>
         </section>
 
@@ -38,24 +42,24 @@
             <h2>Key Features</h2>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <i class="fas fa-database"></i>
-                    <h3>Data Aggregation</h3>
-                    <p>Automatically collects and analyzes data from GitHub, LinkedIn, and coding platforms.</p>
+                    <i class="fas fa-code-branch"></i>
+                    <h3>GitHub Analysis</h3>
+                    <p>Analyze your repositories, commit history, and coding patterns to showcase your technical skills.</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-chart-line"></i>
-                    <h3>Profile Scoring</h3>
-                    <p>Evaluates coding contributions, project diversity, and professional engagement.</p>
+                    <h3>Performance Metrics</h3>
+                    <p>Get detailed metrics on your coding activity, project diversity, and technical strengths.</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-lightbulb"></i>
-                    <h3>Insight Generation</h3>
-                    <p>Provides detailed breakdown of strengths, weaknesses, and recommendations.</p>
+                    <h3>Personalized Insights</h3>
+                    <p>Receive AI-powered recommendations to improve your developer profile.</p>
                 </div>
                 <div class="feature-card">
-                    <i class="fas fa-trophy"></i>
-                    <h3>Recruiter Readiness</h3>
-                    <p>Generates a hiring potential score to optimize your digital presence.</p>
+                    <i class="fas fa-users"></i>
+                    <h3>Peer Comparison</h3>
+                    <p>See how your profile compares to other developers in your field.</p>
                 </div>
             </div>
         </section>
@@ -65,18 +69,18 @@
             <div class="steps">
                 <div class="step">
                     <div class="step-number">1</div>
-                    <h3>Input Your Profiles</h3>
-                    <p>Enter your LinkedIn, GitHub, and coding platform profiles or upload your resume.</p>
+                    <h3>Connect Your Profiles</h3>
+                    <p>Enter your GitHub username, LinkedIn profile, and other coding platform usernames.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">2</div>
                     <h3>AI Analysis</h3>
-                    <p>Our AI analyzes your digital presence across multiple platforms.</p>
+                    <p>Our AI analyzes your code, contributions, and professional presence.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">3</div>
                     <h3>Get Insights</h3>
-                    <p>Receive a comprehensive analysis with actionable recommendations.</p>
+                    <p>Receive personalized recommendations to improve your developer profile.</p>
                 </div>
             </div>
         </section>
@@ -86,59 +90,62 @@
             <div class="analyzer-container">
                 <form id="profile-form">
                     <div class="form-group">
-                        <label for="resume">Upload Resume (PDF/DOCX)</label>
-                        <div class="file-upload">
-                            <input type="file" id="resume" accept=".pdf,.docx">
-                            <div class="file-upload-label">
-                                <i class="fas fa-cloud-upload-alt"></i>
-                                <span>Choose a file</span>
-                            </div>
-                            <div class="file-name"></div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="linkedin">LinkedIn Profile URL</label>
-                        <div class="input-with-icon">
-                            <i class="fab fa-linkedin"></i>
-                            <input type="url" id="linkedin" placeholder="https://linkedin.com/in/username">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="github">GitHub Profile URL</label>
+                        <label for="github">GitHub Username <span class="required">*</span></label>
                         <div class="input-with-icon">
                             <i class="fab fa-github"></i>
-                            <input type="url" id="github" placeholder="https://github.com/username">
+                            <input type="text" id="github" placeholder="e.g., octocat" required>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="portfolio">Portfolio URL (Optional)</label>
+                        <label for="linkedin">LinkedIn Profile URL (optional)</label>
+                        <div class="input-with-icon">
+                            <i class="fab fa-linkedin"></i>
+                            <input type="text" id="linkedin" placeholder="e.g., https://linkedin.com/in/username">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="portfolio">Portfolio URL (optional)</label>
                         <div class="input-with-icon">
                             <i class="fas fa-globe"></i>
-                            <input type="url" id="portfolio" placeholder="https://yourportfolio.com">
+                            <input type="url" id="portfolio" placeholder="e.g., https://yourportfolio.com">
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group half">
-                            <label for="leetcode">LeetCode Username (Optional)</label>
+                            <label for="leetcode">LeetCode Username (optional)</label>
                             <div class="input-with-icon">
                                 <i class="fas fa-code"></i>
-                                <input type="text" id="leetcode" placeholder="username">
+                                <input type="text" id="leetcode" placeholder="e.g., leetcoder">
                             </div>
                         </div>
                         <div class="form-group half">
-                            <label for="codeforces">CodeForces Username (Optional)</label>
+                            <label for="codeforces">CodeForces Username (optional)</label>
                             <div class="input-with-icon">
                                 <i class="fas fa-code"></i>
-                                <input type="text" id="codeforces" placeholder="username">
+                                <input type="text" id="codeforces" placeholder="e.g., coder123">
                             </div>
                         </div>
                     </div>
 
-                    <button type="submit" class="btn primary full-width">Analyze My Profile</button>
+                    <div class="form-group">
+                        <label for="resume">Upload Resume (optional)</label>
+                        <div class="file-upload">
+                            <input type="file" id="resume" accept=".pdf,.doc,.docx">
+                            <label for="resume" class="file-upload-label">
+                                <i class="fas fa-cloud-upload-alt"></i>
+                                <span>Choose a file</span>
+                            </label>
+                            <div class="file-name"></div>
+                        </div>
+                    </div>
+
+                    <button type="submit" id="analyze-btn" class="btn primary full-width">
+                        <span>Analyze My Profile</span>
+                        <i class="fas fa-arrow-right"></i>
+                    </button>
                 </form>
             </div>
         </section>
@@ -150,15 +157,18 @@
                 <i class="fas fa-code"></i>
                 <h2>DevProfile Analyzer</h2>
             </div>
-            <p>© 2025 DevProfile Analyzer. All rights reserved.</p>
+            <p>&copy; 2023 DevProfile Analyzer. All rights reserved.</p>
         </div>
     </footer>
 
-    <div id="loading-overlay" class="loading-overlay hidden">
+    <div id="loading-overlay" class="hidden">
         <div class="loading-content">
             <div class="spinner"></div>
-            <h3>Analyzing your profile...</h3>
-            <p>This may take a few moments</p>
+            <h3 id="loading-text">Analyzing your GitHub profile...</h3>
+            <p id="loading-details">This may take a moment</p>
+            <div class="progress-container">
+                <div id="progress-bar" class="progress-bar"></div>
+            </div>
         </div>
     </div>
 
